--- a/styles/style.css
+++ b/styles/style.css
@@ -60,26 +60,43 @@ body{
 /* Top-banner-end */
 .Top-players{
     color: #FFFFFF;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    display: flex;
+    justify-content: center;
+    margin-left: 100px;
 }
-.players{
-    width: 300px;
-    height: 300px;
+.player{
+    width: 330px;
+    height: 456px;
+    background-color: #FFFFFF;
+    /* box-shadow: 2px 2px 2px 2px #888888; */
 }
 .player-image img{
-    width: 100%;
+   width: 100%;
+}
+.player-details{
+    width: 300px;
+    height: 154px;
 }
 .player-details p{
     color: #6C6C6C;
+    line-height: 20px;
+    margin-top: 10px;
 }
 .player-name{
   color:#18191F;
   font-weight: bold;
   font-size: 28px;
   line-height: 20px;
+  margin-bottom: 10px;
+  margin-top: 16px;
 }
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 27px;
+    margin-left: 180px;
+    margin-top: 70px;
+    margin-right: 210px;
+    margin-left: 180px;
 }
