--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body{
     margin: auto;
 }
 
+
 /* Top-banner */
 .Top-banner{
     display: flex;
@@ -57,46 +58,45 @@ body{
 .section-image img{
     width: 100%;
 }
-/* Top-banner-end */
+/* top-banner-end */
 .Top-players{
-    color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    margin-left: 100px;
+    margin-top: 70px;
+}
+.frame{
+    border: white 2px solid;
+}
+.players{ 
+    margin-left: 180px;
+    margin-right: 210px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 45px;
+    grid-column-gap:30px ;
+    justify-items: center;
 }
 .player{
+    
     width: 330px;
-    height: 456px;
-    background-color: #FFFFFF;
-    /* box-shadow: 2px 2px 2px 2px #888888; */
+    height: 474px;
 }
-.player-image img{
-   width: 100%;
+.player img{
+    width: 100%;
 }
-.player-details{
-    width: 300px;
-    height: 154px;
+.player-details h1{
+    color: #18191F;
+    font-weight: bold;
+    font-size: 28px;
+    margin-top: 16px;
+    margin-bottom: 10px;
 }
 .player-details p{
     color: #6C6C6C;
-    line-height: 20px;
     margin-top: 10px;
 }
-.player-name{
-  color:#18191F;
-  font-weight: bold;
-  font-size: 28px;
-  line-height: 20px;
-  margin-bottom: 10px;
-  margin-top: 16px;
-}
-.players{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-row-gap: 30px;
-    grid-column-gap: 27px;
-    margin-left: 180px;
-    margin-top: 70px;
-    margin-right: 210px;
-    margin-left: 180px;
-}
+
+
+
+
+
+
+
